--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@
 /mooc-java-programming-i/part02-Part02_17.SumOfASequence/target/
 /mooc-java-programming-i/part02-Part02_18.SumOfASequenceTheSequel/target/
 /mooc-java-programming-i/part02-Part02_19.Factorial/target/
+/mooc-java-programming-i/part02-Part02_20.RepeatingBreakingAndRemembering/target/
+/mooc-java-programming-i/part02-Part02_21.InAHoleInTheGround/target/
+/mooc-java-programming-i/part02-Part02_22.Reprint/target/
+/mooc-java-programming-i/part02-Part02_23.FromOneToParameter/target/
+/mooc-java-programming-i/part02-Part02_24.FromParameterToOne/target/
