--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,12 @@
 /mooc-java-programming-i/part02-Part02_22.Reprint/target/
 /mooc-java-programming-i/part02-Part02_23.FromOneToParameter/target/
 /mooc-java-programming-i/part02-Part02_24.FromParameterToOne/target/
+/mooc-java-programming-i/part02-Part02_28.Word/target/
+/mooc-java-programming-i/part02-Part02_26.DivisibleByThree/target/
+/mooc-java-programming-i/part02-Part02_27.NumberUno/target/
+/mooc-java-programming-i/part02-Part02_29.Summation/target/
+/mooc-java-programming-i/part02-Part02_30.Smallest/target/
+/mooc-java-programming-i/part02-Part02_31.Greatest/target/
+/mooc-java-programming-i/part02-Part02_32.Averaging/target/
+/mooc-java-programming-i/part02-Part02_33.StarSign/target/
+/mooc-java-programming-i/part02-Part02_34.AdvancedAstrology/target/
