--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@
 /mooc-java-programming-i/part03-Part03_17.RemoveLast/target/
 /mooc-java-programming-i/part03-Part03_18.Swap/target/
 /mooc-java-programming-i/part03-Part03_19.IndexWasNotFound/target/
+/mooc-java-programming-i/part03-Part03_20.SumOfArray/target/
+/mooc-java-programming-i/part03-Part03_21.PrintNeatly/target/
+/mooc-java-programming-i/part03-Part03_22.PrintInStars/target/
