--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,5 @@
 /mooc-java-programming-i/part04-Part04_16.PaymentCard/target/
 /mooc-java-programming-i/part04-Part04_17.Items/target/
 /mooc-java-programming-i/part04-Part04_18.PersonalInformation/target/
+/mooc-java-programming-i/part04-Part04_19.TelevisionPrograms/target/
+/mooc-java-programming-i/part04-Part04_20.Books/target/
