--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,8 @@
 /mooc-java-programming-i/part04-Part04_20.Books/target/
 /mooc-java-programming-i/part04-Part04_21.NumberOfStrings/target/
 /mooc-java-programming-i/part04-Part04_22.Cubes/target/
+/mooc-java-programming-i/part04-Part04_23.CreatingANewFile/target/
+/mooc-java-programming-i/part04-Part04_24.PrintingAFile/target/
+/mooc-java-programming-i/part04-Part04_25.PrintingASpecifiedFile/target/
+/mooc-java-programming-i/part04-Part04_26.GuestListFromAFile/target/
+/mooc-java-programming-i/part04-Part04_27.IsItInTheFile/target/
